--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Homework 8</title>
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="./styles/styles.css" />
   </head>
   <body>
     <!-- В этот список добавляй элементы галереи -->
-    <ul class="gallery js-gallery"></ul>
+    <ul class="gallery js-gallery" id="gallery"></ul>
 
     <!--
       Модальное окно для полноразмерного изображения
